|-- FIXED -| --nav-item-letter-spacing.

--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -493,7 +493,7 @@ template {
 
 .nav .nav-link {
   display: block;
-  padding: 1rem .5rem 1rem .5rem;
+  padding: 0.5rem 1rem;
 }
 
 .nav .nav-link:hover {
